--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 </style>
 </head>
 <body>
-  <div class="message">Use mobile device for social media or doomscrolling websites</div>
+  <div class="message">Use mobile device for social media / doomscrolling websites</div>
 </body>
 </html>
+
 
