--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 </style>
 </head>
 <body>
-  <div class="message">Use mobile device for social media / doomscrolling websites</div>
+  <div class="message">Reached maximum time on social/scrolling sites</div>
 </body>
 </html>
+
 
 
