--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Focus</title>
+<title>Tab for rest</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
   body {
@@ -27,6 +27,7 @@
   <div class="message">Reached maximum time on social/scrolling sites</div>
 </body>
 </html>
+
 
 
 
