--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
 </style>
 </head>
 <body>
-  <div class="message">Social/scrolling site blocked until next resting time</div>
+  <div class="message">Homepage tasks until next resting time</div>
 </body>
 </html>
+
 
 
 
