--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     "I trust myself. what do I want?",
     "students that don't beat themselves up do better",
     "going to keep trying until I succeed",
-    "don't want to ever have to apply for a shitty job and get rejected. I want good jobs to want me"
+    "don't want to ever have to apply for a shitty job and get rejected. I want good jobs to want me",
     "does the challenge match my skill level",
     "later is no better than right now",
     "doing a task well is inversely proportional to doing it often",
@@ -88,6 +88,7 @@
 </script>
 </body>
 </html>
+
 
 
 
