--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     "don't be lazy", 
     "change is needed to move forward",
     "effort = outcome",
-    "it's actually easy",
+    "the hard things are actually easy",
     "specifically what is stopping me and what should I do in the next 10 seconds",
     "studying hard is part of my personality",
     "I trust myself. what do I want?",
@@ -88,6 +88,7 @@
 </script>
 </body>
 </html>
+
 
 
 
